Fix toggle spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -387,7 +387,7 @@ html {
 .slider {
   position: absolute;
   cursor: pointer;
-  top: 0;
+  top: 5;
   left: 0;
   right: 0;
   bottom: 0;
@@ -458,6 +458,7 @@ body.darkmode .heading1, .darkmodetext.main-heading, .darkmodetext.pre-heading{
   filter: invert(100%) !important;
 }
 .night{
+  top: 5;
   margin-left: 5% !important;
   margin-top: 15%;
   vertical-align: middle;
@@ -465,6 +466,7 @@ body.darkmode .heading1, .darkmodetext.main-heading, .darkmodetext.pre-heading{
 }
 
 .day{
+  top: 5;
   margin-left: 5%;
   margin-right: 5% !important;
   margin-top: 15%;
